<!-- 
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent">
 
    <com.google.android.maps.MapView 
        android:id="@+id/mapView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:enabled="true"
        android:clickable="true"
        android:apiKey="AIzaSyAhmIfAqkOOekaI1njrOe4qZRBMLQwg-g4"
        />
    
 	<LinearLayout android:id="@+id/zoom" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_alignParentBottom="true" 
        android:layout_centerHorizontal="true" 
        /> 
</RelativeLayout>
 -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mixpanel"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical" >

    <EditText
        android:id="@+id/edit_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_first_name" />

    <EditText
        android:id="@+id/edit_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_last_name" />

    <EditText
        android:id="@+id/edit_email_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_email_address" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_send"
        android:onClick="sendToMixpanel" />

    <Button
        android:id="@+id/buttonSwitchGMaps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSwitchGMaps" />

</LinearLayout>